--- a/roles/kubernetes/control/tasks/main.yml
+++ b/roles/kubernetes/control/tasks/main.yml
@@ -23,6 +23,7 @@
         state: directory
         owner: "{{ ansible_facts['env']['SUDO_UID'] | default(0) }}"
         group: "{{ ansible_facts['env']['SUDO_GID'] | default(0) }}"
+        mode: 0700
       tags:
         - control
 
@@ -38,3 +39,17 @@
         - control
 
   when: kubectl_on_control_host == true
+
+- name: Download and extract Helm
+  unarchive:
+    src: "https://get.helm.sh/helm-{{ helm_version }}-linux-amd64.tar.gz"
+    dest: /usr/local/bin
+    extra_opts:
+      - --strip=1
+      - --wildcards
+      - '*/helm'
+    remote_src: True
+  tags:
+    - helm
+    - control
+  when: helm_on_control_host == true
