--- a/roles/kubernetes/master/tasks/main.yml
+++ b/roles/kubernetes/master/tasks/main.yml
@@ -52,6 +52,7 @@
     dest: "{{ _user_info.stdout.split(':')[5] | default('/root') }}/.kube/config"
     owner: "{{ ansible_facts['env']['SUDO_UID'] | default(0) }}"
     group: "{{ ansible_facts['env']['SUDO_GID'] | default(0) }}"
+    mode: 0600
     flat: yes
   when: kubectl_on_control_host == true
 
