Simplified bootstrap token code. The new code makes it also possible to add new workers

--- a/roles/kubernetes/master/tasks/bootstrap_token.yml
+++ b/roles/kubernetes/master/tasks/bootstrap_token.yml
@@ -1,51 +1,33 @@
 ---
-- name: Check if a bootstrap token is present
-  stat:
-    path: "/etc/kubernetes/bootstrap_token"
-  register: bootstrap_token_file
-  delegate_to: "{{ first_master_node_ip_address }}"
+- name: Get bootstrap token(s)
+  community.kubernetes.k8s_info:
+    api_version: v1
+    kind: Secret
+    field_selectors:
+      - type=bootstrap.kubernetes.io/token
+    namespace: kube-system
+  register: bootstrap_tokens
 
-- name: Generate Kubeadm bootstrap token
-  command: kubeadm token generate
-  register: _generated_bootstrap_token
-  delegate_to: "{{ first_master_node_ip_address }}"
-  when:
-    - not bootstrap_token_file.stat.exists
-    - bootstrap_token is not defined
-
-- name: Store generated bootstrap token
-  copy:
-    dest: "/etc/kubernetes/bootstrap_token"
-    content: "{{ _generated_bootstrap_token.stdout }}"
-    mode: 0400
-    owner: root
-    group: root
-  delegate_to: "{{ first_master_node_ip_address }}"
-  when: _generated_bootstrap_token.stdout is defined
-
-- name: Store user provided bootstrap token
-  copy:
-    dest: "/etc/kubernetes/bootstrap_token"
-    content: "{{ bootstrap_token }}"
-    mode: 0400
-    owner: root
-    group: root
-  delegate_to: "{{ first_master_node_ip_address }}"
-  when: bootstrap_token is defined
-
-# Doing a cat, set_fact with lookup file does not work
-- name: Get bootstrap_token file content
-  command: cat /etc/kubernetes/bootstrap_token
-  register: _bootstrap_token_content
-  delegate_to: "{{ first_master_node_ip_address }}" 
-  changed_when: False
-
-- name: "Debug: bootstrap token (when debug is enabled)"
-  debug:
-    var: _bootstrap_token_content
-  when: (debug_master | bool)
-
-- name: Set bootstrap token fact
+- name: Set bootstrap token fact from existing token
   set_fact:
-    bootstrap_token: "{{ _bootstrap_token_content.stdout }}"
+    bootstrap_token: "{{ token['token-id'] | b64decode }}.{{ token['token-secret'] | b64decode }}"
+  vars:
+    token: "{{ bootstrap_tokens.resources[0].data }}"
+  when: bootstrap_tokens.resources | length > 0
+  delegate_facts: True
+
+- name: Create bootstrap token
+  command: kubeadm token create --ttl 10m
+  register: bootstrap_token_created
+  delegate_to: "{{ first_master_node_ip_address }}"
+  when: bootstrap_tokens.resources | length < 1
+
+- name: Set bootstrap token fact from new create token
+  set_fact:
+    bootstrap_token: "{{ bootstrap_token_created.stdout }}"
+  vars:
+    token: "{{ bootstrap_tokens.resources[0].data }}"
+  when:
+    - bootstrap_tokens.resources | length < 1
+    - bootstrap_token_created.changed == true
   delegate_facts: True
