Retry the terraform call until we found an ip address for the first worker

--- a/roles/infrastructure/terraform/defaults/main.yml
+++ b/roles/infrastructure/terraform/defaults/main.yml
@@ -8,3 +8,4 @@ user:
   gecos: "{{ ansible_facts['user_gecos'] }}"
   group: "{{ ansible_facts['user_id'] }}"
   ssh_pub_key: "{{ lookup('file', ansible_facts['user_dir'] + '/.ssh/id_rsa.pub') }}"
+debug_terraform: false
