--- a/roles/infrastructure/terraform/tasks/main.yml
+++ b/roles/infrastructure/terraform/tasks/main.yml
@@ -16,6 +16,14 @@
       master_count: "{{ master_count }}"
       worker_count: "{{ worker_count }}"
   register: _terraform
+  until: _terraform.outputs.workers_data.value[0].network_interface[0].addresses | length > 0
+  retries: 10
+  delay: 10
+
+- name: Debug Terraform output
+  debug:
+    var: _terraform
+  when: ( debug_terraform | bool )
 
 - name: Fail when ip information is not present (yet)
   debug:
