Set a default value which avoids an dirty error message from Ansible when something is wrong with the TF data

--- a/roles/infrastructure/terraform/tasks/main.yml
+++ b/roles/infrastructure/terraform/tasks/main.yml
@@ -16,7 +16,7 @@
       master_count: "{{ master_count }}"
       worker_count: "{{ worker_count }}"
   register: _terraform
-  until: _terraform.outputs.workers_data.value[0].network_interface[0].addresses | length > 0
+  until: _terraform.outputs.workers_data.value[0].network_interface[0].addresses | default([]) | length > 0
   retries: 10
   delay: 10
 
