--- a/roles/kubernetes/master/defaults/main.yml
+++ b/roles/kubernetes/master/defaults/main.yml
@@ -10,11 +10,11 @@ kubectl_on_control_host: true
 kubeadm_opts: ""
 
 # Helm
-helm_version: v3.4.0
+helm_version: v3.5.4  # see https://github.com/helm/helm/releases
 
 # Cilium
 network_plugin: cilium
-cilium_release: 1.9.1    # see https://helm.cilium.io/
+cilium_release: 1.9.6    # see https://helm.cilium.io/
 install_hubble: true
 hubble_ui_ingress_hostname: hubble.example.com
 
