--- a/roles/infrastructure/terraform/defaults/main.yml
+++ b/roles/infrastructure/terraform/defaults/main.yml
@@ -2,10 +2,12 @@
 domain: example.com
 master_count: 1
 worker_count: 3
-installation_image: "https://cloud.centos.org/centos/8/x86_64/images/CentOS-8-GenericCloud-8.3.2011-20201204.2.x86_64.qcow2"
+installation_image: "https://cloud.centos.org/centos/8/x86_64/images/CentOS-8-GenericCloud-8.4.2105-20210603.0.x86_64.qcow2"
 user:
   name: "{{ ansible_facts['user_id'] }}"
   gecos: "{{ ansible_facts['user_gecos'] }}"
   group: "{{ ansible_facts['user_id'] }}"
   ssh_pub_key: "{{ lookup('file', ansible_facts['user_dir'] + '/.ssh/id_rsa.pub') }}"
 debug_terraform: false
+network_interface_type: false
+openvswitch_bridge: false
