Large update:  - Update Cilium to 1.10.5  - Update Centos to 8.4  - Update Helm to 3.5.4  - Adopted to new naming of the ansible-kubernetes collection  - Preparing to add BGP support for Cilium. Added the options, but those do not work yet  - Added the option to use lan interfaces on an Openvswitch

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 **/terraform.tfstate
 **/terraform.tfstate
 **/terraform.tfstate.backup
+**/infrastructure/terraform/tf-data/main.tf
 **/inventory
 **/cloud-init.cfg
