--- a/roles/kubernetes/common/tasks/kubernetes.yml
+++ b/roles/kubernetes/common/tasks/kubernetes.yml
@@ -24,10 +24,9 @@
   loop:
     - "kubelet-{{ rpm_version }}"
     - "kubeadm-{{ rpm_version }}"
-    - "kubectl-{{ rpm_version }}"
     - tc
 
-- name: Kubernetes systctl settings
+- name: Kubernetes sysctl settings
   sysctl:
       name: "{{ item.name }}"
       value: "{{ item.value }}"
