--- a/roles/kubernetes/master/tasks/bootstrap_token.yml
+++ b/roles/kubernetes/master/tasks/bootstrap_token.yml
@@ -1,6 +1,6 @@
 ---
 - name: Get bootstrap token(s)
-  community.kubernetes.k8s_info:
+  kubernetes.core.k8s_info:
     api_version: v1
     kind: Secret
     field_selectors:
