--- a/roles/kubernetes/master/tasks/network_plugin/cilium.yml
+++ b/roles/kubernetes/master/tasks/network_plugin/cilium.yml
@@ -5,7 +5,7 @@
 # systemctl restart systemd-sysctl
 
 - name: Add Cilium Helm repo
-  community.kubernetes.helm_repository:
+  kubernetes.core.helm_repository:
     name: cilium
     repo_url: https://helm.cilium.io
   tags:
@@ -14,12 +14,38 @@
     - master
 
 - name: Install Cilium
-  community.kubernetes.helm:
+  kubernetes.core.helm:
     name: cilium
     chart_ref: cilium/cilium
     chart_version: "{{ cilium_release }}"
     release_namespace: kube-system
     release_values: "{{ cilium_helm_values }}"
+  tags:
+    - cilium
+    - network
+    - master
+
+- name: Configure BPG ConfigMap
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: ConfigMap
+      metadata:
+        name: bgp-config
+        namespace: kube-system
+      data:
+        config.yaml: |
+          peers:
+            - peer-address: 192.168.1.1
+              peer-asn: 64512
+              my-asn: 64512
+          address-pools:
+            - name: default
+              protocol: bgp
+              addresses:
+                - 172.16.10.0/24
+  when: (cilium_enable_bgp | bool)
   tags:
     - cilium
     - network
