--- a/roles/infrastructure/terraform/tasks/main.yml
+++ b/roles/infrastructure/terraform/tasks/main.yml
@@ -22,23 +22,12 @@
       master_count: "{{ master_count }}"
       worker_count: "{{ worker_count }}"
   register: _terraform
-  until: _terraform.outputs.workers_data.value[0].network_interface[0].addresses | default([]) | length > 0
+  until:
+    - (_terraform.outputs.masters_data.value | community.general.json_query('[*].network_interface[*].addresses') | length) == master_count
+    - (_terraform.outputs.workers_data.value | community.general.json_query('[*].network_interface[*].addresses') | length) ==  worker_count
+    - (_terraform.outputs.k8s_control_data.value.network_interface | community.general.json_query('[*].addresses') | length) == 1
   retries: 10
   delay: 10
-
-- name: Debug Terraform output
-  debug:
-    var: _terraform
-  when: ( debug_terraform | bool )
-
-- name: Fail when ip information is not present (yet)
-  debug:
-    msg: "IP information for node {{ item.name }} is not present (yet). Run this playbook again if the systems where still booting"
-  loop_control:
-    label: "{{ item.name }}"
-  loop: "{{ _terraform.outputs.masters_data.value }} + {{ _terraform.outputs.workers_data.value }} + [ {{ _terraform.outputs.k8s_control_data.value }} ]"
-  failed_when: item.network_interface[0].addresses | length < 1
-  when: item.network_interface[0].addresses | length < 1
 
 - name: Create inventory file
   template:
@@ -76,9 +65,14 @@
   wait_for:
     port: 22
     timeout: 300
-    host: "{{ item.network_interface[0].addresses[0] }}"
+    host: "{{ item[0][0] }}"
     search_regex: OpenSSH
-    delay: 10
+  vars:
+    _masters: "{{ _terraform.outputs.masters_data.value | community.general.json_query('[*].network_interface[*].addresses') }}"
+    _workers: "{{ _terraform.outputs.workers_data.value | community.general.json_query('[*].network_interface[*].addresses') }}"
+    _control: "{{ _terraform.outputs.k8s_control_data.value.network_interface | community.general.json_query('[*].addresses') }}"
+    _all_ips: "{{ [ _control ] + _workers + _masters }}"
   loop_control:
-    label: "{{ item.name }}"  
-  loop: "{{ _terraform.outputs.masters_data.value }} + {{ _terraform.outputs.workers_data.value }} + [ {{ _terraform.outputs.k8s_control_data.value }} ]"
+    label: "{{ item[0][0] }}"
+  loop: "{{ _all_ips }}"
+
