Upgrade to be compatible with Kubernetes 1.28

--- a/playbook-prepare-controlhost.yml
+++ b/playbook-prepare-controlhost.yml
@@ -45,5 +45,6 @@
       synchronize:
         src: "{{ playbook_dir }}"
         dest: "{{ ansible_facts['user_dir'] }}"
+      delegate_to: localhost
       tags:
         - sync
