--- a/roles/kubernetes/common/vars/main.yml
+++ b/roles/kubernetes/common/vars/main.yml
@@ -1,4 +1,5 @@
 ---
 # Make 1.17.3-0 from v1.17.3
-rpm_version: "{{ kubernetes_version | regex_replace('^v', '') }}-0"
+rpm_version: "{{ kubernetes_version | regex_replace('^v', '') }}"
 crio_version: "{{ kubernetes_version | regex_replace('^v([0-9]+)\\.([0-9]+)\\.[0-9]+', '\\1.\\2') }}"
+kubernetes_installation_version: "{{ kubernetes_version | regex_replace('^(v[0-9]+)\\.([0-9]+)\\.[0-9]+', '\\1.\\2') }}"
