--- a/roles/kubernetes/master/defaults/main.yml
+++ b/roles/kubernetes/master/defaults/main.yml
@@ -3,18 +3,17 @@ debug_master: false
 apiserver_advertise_address: "{{ first_master_node_ip_address }}"
 service_cidr: "10.96.0.0/12"
 pod_network_cidr: "10.217.0.0/16"
-calico_etcd_service: "10.96.232.136"
 kubectl_on_control_host: true
 
 # Kubeadm
 kubeadm_opts: ""
 
 # Helm
-helm_version: v3.5.4  # see https://github.com/helm/helm/releases
+helm_version: v3.13.2  # see https://github.com/helm/helm/releases
 
 # Cilium
 network_plugin: cilium
-cilium_release: 1.10.5    # see https://helm.cilium.io/
+cilium_release: 1.14.3    # see https://helm.cilium.io/
 install_hubble: true
 cilium_enable_bgp: false
 hubble_ui_ingress_hostname: hubble.example.com
@@ -24,6 +23,6 @@ install_traefik: true
 traefik_ingress_hostname: traefik.example.com
 
 # MetalLB
-install_metallb: true
+install_metallb: false
 metallb_pool_start: 192.168.122.240
 metallb_pool_end: 192.168.122.250
