--- a/roles/kubernetes/common/tasks/main.yml
+++ b/roles/kubernetes/common/tasks/main.yml
@@ -1,14 +1,14 @@
 ---  
 # TODO: cilium does not like selinux atm, create a policy for it
 - name: Put SELinux in permissive mode, logging actions that would be blocked.
-  selinux:
+  ansible.posix.selinux:
     policy: targeted
     state: permissive
   tags:
     - common
 
 - name: Upgrade to newer kernel
-  include_tasks: upgrade_kernel.yml
+  ansible.builtin.include_tasks: upgrade_kernel.yml
   when:
     - network_plugin == 'cilium'
     - ansible_kernel is version_compare('4.8','<')
@@ -16,7 +16,7 @@
     - common
 
 - name: Disable firewalld
-  service:
+  ansible.builtin.service:
     name: firewalld
     state: stopped
     enabled: false
@@ -25,16 +25,16 @@
     - common
 
 - name: Disable swap
-  include_tasks: disable_swap.yml
+  ansible.builtin.include_tasks: disable_swap.yml
   tags:
     - common
 
 - name: Install the container runtime engine
-  include_tasks: runtime_{{ container_runtime_engine }}.yml
+  ansible.builtin.include_tasks: runtime_{{ container_runtime_engine }}.yml
   tags:
     - common
 
 - name: Install and configure Kubernetes requirements
-  include_tasks: kubernetes.yml
+  ansible.builtin.include_tasks: kubernetes.yml
   tags:
     - common
