--- a/roles/kubernetes/master/tasks/network_plugin/main.yml
+++ b/roles/kubernetes/master/tasks/network_plugin/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install network plugin
-  include_tasks: "{{ network_plugin }}.yml"
+  ansible.builtin.include_tasks: "{{ network_plugin }}.yml"
   tags:
     - master
     - network
