--- a/roles/infrastructure/terraform/tasks/main.yml
+++ b/roles/infrastructure/terraform/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 - name: Create cloud-init config for Terraform
-  template:
+  ansible.builtin.template:
     src: cloud-init.cfg.j2
     dest: "{{ playbook_dir }}/roles/infrastructure/terraform/tf-data/cloud-init.cfg"
 
 - name: Copy Terraform main.tf
-  template:
+  ansible.builtin.template:
     src: main.tf.j2
     dest: "{{ playbook_dir }}/roles/infrastructure/terraform/tf-data/main.tf"
     mode: 0644
 
 - name: Create nodes using Terraform
-  terraform:
+  community.general.terraform:
     project_path: "{{ playbook_dir }}/roles/infrastructure/terraform/tf-data"
     binary_path: "{{ tf_binary_path | default(omit) }}"
     force_init: true
@@ -30,24 +30,24 @@
   delay: 10
 
 - name: Debug Terraform output
-  debug:
+  ansible.builtin.debug:
     var: _terraform
   when: ( debug_terraform | bool )
 
 - name: Create inventory file
-  template:
+  ansible.builtin.template:
     src: inventory.j2
     dest: "{{ playbook_dir }}/inventory"
 
 - name: Add control node to the running inventory
-  add_host:
+  ansible.builtin.add_host:
     name: "{{ _terraform.outputs.k8s_control_data.value.name }}"
     ansible_host: "{{ _terraform.outputs.k8s_control_data.value.network_interface[0].addresses[0] }}"
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
     groups: control
 
 - name: Add master node(s) to the running inventory
-  add_host:
+  ansible.builtin.add_host:
     name: "{{ item.name }}"
     ansible_host: "{{ item.network_interface[0].addresses[0] }}"
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
@@ -57,7 +57,7 @@
   loop: "{{ _terraform.outputs.masters_data.value }}"
 
 - name: Add worker node(s) to the running inventory
-  add_host:
+  ansible.builtin.add_host:
     name: "{{ item.name }}"
     ansible_host: "{{ item.network_interface[0].addresses[0] }}"
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
@@ -67,7 +67,7 @@
   loop: "{{ _terraform.outputs.workers_data.value }}"
 
 - name: Wait max 300 seconds for port 22 to become open and contain "OpenSSH"
-  wait_for:
+  ansible.builtin.wait_for:
     port: 22
     timeout: 300
     host: "{{ item[0][0] }}"
