--- a/roles/kubernetes/common/tasks/disable_swap.yml
+++ b/roles/kubernetes/common/tasks/disable_swap.yml
@@ -2,20 +2,20 @@
 # Kubeadm/kubernetes requires that swap is disabled
 
 - name: Get swap information
-  command: grep -v ^Filename /proc/swaps
+  ansible.builtin.command: grep -v ^Filename /proc/swaps
   ignore_errors: true
   failed_when: false
   changed_when: false
   register: _swapinfo
 
 - name: Disable system swap
-  shell: "swapoff -a"
+  ansible.builtin.shell: "swapoff -a"
   vars:
     _nr: "{{ _swapinfo.stdout_lines | count }}"
   when: _nr | int > 0
 
 - name: Remove current swaps from fstab
-  lineinfile:
+  ansible.builtin.lineinfile:
     dest: /etc/fstab
     regexp: '(?i)^([^#][\S]+\s+(none|swap)\s+swap.*)'
     line: '# \1'
@@ -23,7 +23,7 @@
     state: present
     
 - name: Disable swappiness
-  sysctl:
+  ansible.posix.sysctl:
     name: "vm.swappiness"
     value: "1"
     state: present
